[tool.poetry]
name = "sjfirebase"
version = "1.0.0"
description = "Port firebase to python"
authors = ["Kenechukwu Akubue <kengoon19@gmail.com>"]
readme = "README.md"
packages = [{include = "sjfirebase"}]

[tool.poetry.dependencies]
python = "^3.11"
kvdroid = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
