[tool.poetry]
name = "sjfirebase"
version = "1.4.0"
description = "Implement Firebase Java SDK in python"
authors = ["Kenechukwu Akubue <kengoon19@gmail.com>"]
readme = "README.md"
packages = [{include = "sjfirebase"}]

[tool.poetry.dependencies]
python = "^3.8"
pyjnius = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
